# FarmShield-AI

./: .gitignore  LICENSE  README.md  README_HF.md  app.py  main.py  pyproject.toml  requirements.txt  yolo26.ipynb
app/: __init__.py  alert_manager.py  config.py  gradio_app.py  onnx_predict.py  utils.py
models/: best.onnx
